# Outback-CommandCore

./: .gitignore  CLAUDE.md  README.md  STYLE_GUIDE.md  build_deb.sh  pyproject.toml  setup.py
ARES-i/: README.md  ares-i.py  requirements.txt
ARES-i/app/: config.py  main.py
ARES-i/core/: __init__.py  base.py  utils.py
ARES-i/docs/: README.md
ARES-i/tabs/: __init__.py  device_info.py  log_console.py  tools.py
ARES-i/tests/: test_main.py
ARES-i/ui/: __init__.py  splash_screen.py  window.py
BLACKSTORM/: README.md  advanced_tab.py  blackstorm_launcher.py  bulk_operations_tab.py  dashboard_tab.py  device_management_tab.py  forensic_tools_tab.py  requirements.txt  security_compliance_tab.py  settings_tab.py  wipe_operations_tab.py  wipe_profiles.txt
BLACKSTORM/app/: config.py  main.py
Codex/: README.md  __init__.py  requirements.txt
CommandCore/: README.md  __main__.py  commandcore-launcher.desktop  requirements-optional.txt  requirements.txt
DROIDCOM/: README.md  __init__.py  __main__.py  android_tools_linux.py  android_tools_linux.py.bak  app.py  constants.py  dependencies.py  main.py  requirements.txt
HackAttack/: README.md  __init__.py  hack_attack_gui.py  install.sh  launch.py  requirements.txt  setup.py  temp_requirements.txt
NIGHTFIRE/: README.md  nightfire.py
OMNISCRIBE/: README.md  omniscribe.py
PC-X/: README.md  pc_tools_linux.py  requirements.txt
VANTAGE/: README.md  launch_vantage.py  requirements.txt  system-requirements.txt
commandcore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: system-deps.md
(+287 files in other folders)
