[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "commandcore"
version = "1.0.0"
description = "CommandCore Launcher - Device Management Application"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "GitPython>=3.1.0",
]

[project.scripts]
commandcore = "CommandCore.app.main:main"

[tool.setuptools.packages.find]
include = ["CommandCore*"]

[tool.setuptools.data-files]
"share/applications" = ["CommandCore/commandcore-launcher.desktop"]
"share/icons/hicolor/256x256/apps" = ["icons/commandcore.png"]
